--- a/ansible.cfg
+++ b/ansible.cfg
@@ -134,7 +134,7 @@
 ;hash_behaviour=replace
 
 # (pathlist) Comma-separated list of Ansible inventory sources
-;inventory=/etc/ansible/hosts
+inventory=./hosts.yml
 
 # (pathspec) Colon-separated paths in which Ansible will search for HttpApi Plugins.
 ;httpapi_plugins=/home/mkncorp.com/kristian.alexander/.ansible/plugins/httpapi:/usr/share/ansible/plugins/httpapi
