--- a/hosts.yml
+++ b/hosts.yml
@@ -1,10 +1,16 @@
 all:
-  hosts:
-    kubenode1:
-      ansible_user: kubedeveloper
-    kubenode2:
-      ansible_user: kubedeveloper
-    kubenode3:
-      ansible_user: kubedeveloper
-    kubenode4:
-      ansible_user: kubedeveloper
+  children:
+    nodes:
+      hosts:
+        kubenode1:
+          ansible_user: kubedeveloper
+          apiserver_address: 10.80.1.98
+        kubenode2:
+          ansible_user: kubedeveloper
+        kubenode3:
+          ansible_user: kubedeveloper
+        kubenode4:
+          ansible_user: kubedeveloper
+    master:
+      hosts:
+        kubenode1:
